--- a/src/Lab1Demo.qsf
+++ b/src/Lab1Demo.qsf
@@ -250,46 +250,6 @@ set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[11] -
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[12] -to auto_signaltap_0|gnd -section_id auto_signaltap_0
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[13] -to auto_signaltap_0|vcc -section_id auto_signaltap_0
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[15] -to auto_signaltap_0|vcc -section_id auto_signaltap_0
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/game_controller.sv
-set_global_assignment -name BDF_FILE RTL/VGA/Smiley_Block_T.bdf
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/smileyBitMap.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/square_object.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/back_ground_draw.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/smiley_move.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/objects_mux.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/VGA_Controller.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/NumbersBitMap.sv
-set_global_assignment -name QIP_FILE RTL/VGA/valX.qip
-set_global_assignment -name TCL_SCRIPT_FILE constraints/pin.tcl
-set_global_assignment -name BDF_FILE RTL/KEYBOARDX/TOP_KBD.bdf
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/KEYBOARDX/lpf.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/KEYBOARDX/keyPad_decoder.sv
-set_global_assignment -name BDF_FILE RTL/KEYBOARDX/KBDINTF.bdf
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/KEYBOARDX/byterec.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/KEYBOARDX/bitrec.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/KEYBOARDX/simple_up_counter.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/KEYBOARDX/random.sv
-set_global_assignment -name CDF_FILE output_files/Chain1.cdf
-set_global_assignment -name SDC_FILE DE10_Standard_Audio.sdc
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/Seg7/SEG7.SV
-set_global_assignment -name BDF_FILE RTL/AUDIO/TOP_AUDIO.bdf
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/AUDIO/SinTable.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/AUDIO/addr_counter.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/AUDIO/prescaler.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/AUDIO/ToneDecoder.sv
-set_global_assignment -name BDF_FILE RTL/AUDIO/AUDIO.bdf
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/AUDIO/audio_codec_controller/i2c.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/AUDIO/audio_codec_controller/DualSerial2parallel.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/AUDIO/audio_codec_controller/clock_500.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/AUDIO/audio_codec_controller/audio_codec_controller.sv
-set_global_assignment -name QIP_FILE Number_position.qip
-set_global_assignment -name QIP_FILE CLK_31P5.qip
-set_global_assignment -name SIP_FILE CLK_31P5.sip
-set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
-set_global_assignment -name BDF_FILE RTL/TOP.bdf
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to AUD_ADCDAT
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to AUDOUT[0]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to AUDOUT[1]
@@ -356,5 +316,46 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to altera_reserved_tdi
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to altera_reserved_tdo
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to altera_reserved_tms
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to resetN_pin
-set_global_assignment -name SLD_FILE db/stp1_auto_stripped.stp
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/mif_draw.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/game_controller.sv
+set_global_assignment -name BDF_FILE RTL/VGA/Smiley_Block_T.bdf
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/smileyBitMap.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/square_object.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/back_ground_draw.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/smiley_move.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/objects_mux.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/VGA_Controller.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/NumbersBitMap.sv
+set_global_assignment -name QIP_FILE RTL/VGA/valX.qip
+set_global_assignment -name TCL_SCRIPT_FILE constraints/pin.tcl
+set_global_assignment -name BDF_FILE RTL/KEYBOARDX/TOP_KBD.bdf
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/KEYBOARDX/lpf.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/KEYBOARDX/keyPad_decoder.sv
+set_global_assignment -name BDF_FILE RTL/KEYBOARDX/KBDINTF.bdf
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/KEYBOARDX/byterec.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/KEYBOARDX/bitrec.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/KEYBOARDX/simple_up_counter.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/KEYBOARDX/random.sv
+set_global_assignment -name CDF_FILE output_files/Chain1.cdf
+set_global_assignment -name SDC_FILE DE10_Standard_Audio.sdc
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/Seg7/SEG7.SV
+set_global_assignment -name BDF_FILE RTL/AUDIO/TOP_AUDIO.bdf
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/AUDIO/SinTable.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/AUDIO/addr_counter.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/AUDIO/prescaler.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/AUDIO/ToneDecoder.sv
+set_global_assignment -name BDF_FILE RTL/AUDIO/AUDIO.bdf
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/AUDIO/audio_codec_controller/i2c.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/AUDIO/audio_codec_controller/DualSerial2parallel.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/AUDIO/audio_codec_controller/clock_500.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/AUDIO/audio_codec_controller/audio_codec_controller.sv
+set_global_assignment -name QIP_FILE Number_position.qip
+set_global_assignment -name QIP_FILE CLK_31P5.qip
+set_global_assignment -name SIP_FILE CLK_31P5.sip
+set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
+set_global_assignment -name BDF_FILE RTL/TOP.bdf
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SLD_FILE db/stp1_auto_stripped.stp
